tests/run-make/crate-loading/multiple-dep-versions.stderr
warning: unused imports: `OtherType`, `Trait2`, and `Type`
  --> replaced
   |
LL | use dep_2_reexport::{OtherType, Trait2, Type, into_type};
   |                      ^^^^^^^^^  ^^^^^^  ^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `Trait`, `do_something_trait`, `do_something_type`, and `do_something`
  --> replaced
   |
LL | use dependency::{Trait, do_something, do_something_trait, do_something_type};
   |                  ^^^^^  ^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^

[compiler/rustc_trait_selection/src/error_reporting/traits/fulfillment_errors.rs:2472:9] &impl_self_path = "dep_2_reexport::Type"
error[E0277]: the trait bound `dep_2_reexport::Type: From<MainType>` is not satisfied
  --> replaced
   |
LL |     into_type(MainType(42));
   |     --------- ^^^^^^^^^^^^ the trait `From<MainType>` is not implemented for `dep_2_reexport::Type`
   |     |
   |     required by a bound introduced by this call
   |
   = note: required for `MainType` to implement `Into<dep_2_reexport::Type>`
note: required by a bound in `into_type`
  --> replaced
   |
LL | pub fn into_type(_: impl Into<Type>) {}
   |                          ^^^^^^^^^^ required by this bound in `into_type`

error: aborting due to 1 previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0277`.